tjwa.default.tap/staging/httpproxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: tjwa
  namespace: default
spec:
  virtualhost:
    fqdn: tjwa.34.145.182.18.nip.io # Only accessible via http://tjwa.34.145.182.18.nip.io/ NOT https. Likely due to certifcate not being setup.
  routes:
  - conditions:
    - prefix: /
    services:
    - name: tjwa
      port: 8080
      weight: 50
    - name: tjwa-blue
      port: 8080
      weight: 50
